# trusted-clock-source

./: README.md
Local/: .gitignore  README.md
Local/Dependency/: README.md  install-rats-tls.sh
Local/Example/: .gitignore
Local/Example/SGX/: CMakeLists.txt
Local/Example/SGX/InitClient/: CMakeLists.txt  InitClient.cpp
Local/Example/SGX/InitServer/: CMakeLists.txt  InitServer.cpp
Local/src/Module/: README.md
Local/src/Module/Communication/: CommUtils.hpp  TrustedComm.hpp
Local/src/Module/TimeKeeping/: .gitignore  Algorithm.cpp  Algorithm.h  Config.cpp  Config.h  Sync.h  TimeKeeping.cpp  TimeKeeping.h  Util.cpp  Util.h
Local/src/Module/Utility/: TCSExcept.hpp  TCSMessage.h
Local/src/Module/tcs_rdma/: README.md  client.c  common.c  common.h  gen.sh  server.c
Local/src/Support/Native/: README.md
Local/src/Support/SGX/: .gitignore  CMakeLists.txt  README.md
Local/src/Support/SGX/Communication/: CMakeLists.txt
Local/src/Support/SGX/Communication/Client/: CMakeLists.txt  SGXTrustedClient.cpp  SGXTrustedClient.h
Local/src/Support/SGX/Communication/Client/Enclave/: CMakeLists.txt  ClientEnclave.c  ClientEnclave.edl
Local/src/Support/SGX/Communication/Server/: CMakeLists.txt  SGXTrustedServer.cpp  SGXTrustedServer.h
Local/src/Support/SGX/Communication/Server/Enclave/: CMakeLists.txt  ServerEnclave.c  ServerEnclave.edl
Local/src/Support/SGX/EnclaveUtils/: EnclaveUtils.c  EnclaveUtils.h
Local/src/Support/SGX/Utility/: SGXExcept.hpp  SGXUtils.hpp
Local/src/Support/SGX/cmake/: TCSSGXCommon.cmake
